[gd_scene load_steps=3 format=3 uid="uid://dbcem4828tyai"]

[ext_resource type="Script" uid="uid://ci8ci2us3516o" path="res://button.gd" id="1_wnoqq"]
[ext_resource type="Texture2D" uid="uid://cnkxa8jk7smjk" path="res://icon.svg" id="2_cy0t1"]

[node name="Node2D" type="Node2D"]

[node name="Button" type="Button" parent="."]
offset_left = 183.0
offset_top = 170.0
offset_right = 495.0
offset_bottom = 425.0
script = ExtResource("1_wnoqq")

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(491, -67)
texture = ExtResource("2_cy0t1")

[node name="Button2" type="Button" parent="Button/Sprite2D"]
offset_left = -674.0
offset_top = -103.0
offset_right = -666.0
offset_bottom = -95.0

[node name="MovingTimer" type="Timer" parent="Button"]

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="button_up" from="Button" to="Button" method="_on_button_up"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="timeout" from="Button/MovingTimer" to="Button" method="_on_moving_timer_timeout"]
